syntax = "proto3";

package kzmake.microkit.task.v1;

option go_package = "github.com/kzmake/micro-kit/service/task-service/interface/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Task Entity
message Task {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp deleted_at = 5;
}
